sass/layout/_header.scss
.header {
    position: absolute;
    z-index: 99;
    height: 9.5rem;
    width: 100%;
    display: flex;
    padding: 1rem 3rem;
    &__logo-box {
        img {
            height: 100%;
        }
    }
    &--fixed {
        position: fixed;
        height: 60px;
        transition: all .5s;
        background-color: rgba($color-black, .9);
    }
}

// If js is not enabled
.header.no-js {
    position: fixed;
    background-color: rgba($color-black, .9);
    height: 60px;
    &__logo-box {
        height: 40px;
        width: 40px;
    }
}

